feat(backend): Implementación de la primera parte de la historia de Usuario: Crear una POA del lado de los módulos: Actividades y POA
